--- a/RiftStatistics/src/main/resources/webapp/riftstatistics/web/index.html
+++ b/RiftStatistics/src/main/resources/webapp/riftstatistics/web/index.html
@@ -8,21 +8,21 @@
 <body>
 <header class="header_object">
   <a href="#" class="header_object logo">
-    <img src="../Drawables/GeneralImages/RiftStatisticsLogo.png" width="30" height="34.05" alt="RiftStatistics" class="header_object">
+    <img src="../Drawables/GeneralImages/RiftStatisticsOnlyTitle.png" width="200" height="24.5" alt="RiftStatistics" class="header_object">
   </a>
   <div class="searchArea">
     <nav class="nav_nav">
       <ul class="nav_buttons header_object">
         <li>
           <a href="#" class="nav_button header_object" >
-            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#717171" class="bi bi-caret-left header_object" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#302f2f" class="bi bi-caret-left header_object" viewBox="0 0 16 16">
               <path d="M10 12.796V3.204L4.519 8 10 12.796zm-.659.753-5.48-4.796a1 1 0 0 1 0-1.506l5.48-4.796A1 1 0 0 1 11 3.204v9.592a1 1 0 0 1-1.659.753z"/>
             </svg>
           </a>
         </li>
         <li>
           <a href="#" class="nav_button header_object">
-            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#717171" class="bi bi-arrow-clockwise header_object" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#302f2f" class="bi bi-arrow-clockwise header_object" viewBox="0 0 16 16">
               <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
               <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/>
             </svg>
@@ -30,7 +30,7 @@
         </li>
         <li>
           <a href="#" class="nav_button header_object">
-            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#717171" class="bi bi-caret-right header_object" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#302f2f" class="bi bi-caret-right header_object" viewBox="0 0 16 16">
               <path d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"/>
             </svg>
           </a>
@@ -65,7 +65,9 @@
     </div>
     <button type="button" class="accountButton" id="show-signup">SignUp</button>
     <div class="popupSign">
-      <div class="close-btn">&times;</div>
+      <div>
+        <object class="close-btn">&times;</object>
+      </div>
       <div class="form">
         <h2>SignUp</h2>
         <div class="form_element">
